# BoardGameRuleOCRChunker

./: .gitignore  game_chunker_test.py  main.py  multithread.py  pdfs_to_convert.json  pyproject.toml  single_thread.py
Debug Tools/: chroma_debug.py
chroma_db/3b940858-4c1c-4f55-843c-9b26e040391f/: index_metadata.pickle
gemma_chroma_db/16696958-ffbd-402c-8fc9-807c3e772bee/: index_metadata.pickle
gemma_chroma_db/dd567110-e516-48fc-9e67-8df987538a9e/: index_metadata.pickle
gemma_chroma_db/e887e2b2-e200-42a5-8a19-9643b6bb291c/: index_metadata.pickle
src/: basemodels.py
src/tools/: __init__.py  docling_converter.py  game_rules_chunker.py
