[project]
name = "boardgameconverter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.102.2",
    "dotenv>=0.9.9",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
]
